[package]
name = "over-the-counter"
version = "0.1.0"
authors = ["Jakub <jakub@moonbite.space>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cosmwasm-storage = "1.0"
cw-storage-plus = "1.0"
cw2 = "1.0"
cw20 = "1.0"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
cw-multi-test = "0.16"
